--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "token": "NzY1MDg4OTA4NzczODE4Mzc4.X4Pukg.3UsqIvJh5DGxAbpRMIGwaoUD9Wc",
   "prefix": "$",
   "mongo": "mongodb+srv://StriderUser:nypO3E7cnpzP8jO8@cluster0.z38we.mongodb.net/strider-bannedwords?retryWrites=true&w=majority",
-  "port": "3000",
+  "port": "80",
   "clientID": "765088908773818378",
   "clientSecret": "P29xiNWlxf6s9DiKIcLLPx0-n5Dr1RxU",
-  "callbackURL": "http://localhost:3000/auth/callback",
+  "callbackURL": "https://dash.striderbot.net//auth/callback",
   "scope": ["identify", "guilds"]
 }
  
