--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "mongoose": "^5.11.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4"
