--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "HIDDEN",
+  "token": "NzY1MDg4OTA4NzczODE4Mzc4.X4Pukg.D5R7Pqg1DGZKqZBjSpxDAPnNOUQ",
   "prefix": "$",
   "mongo": "mongodb+srv://StriderUser:nypO3E7cnpzP8jO8@cluster0.z38we.mongodb.net/strider-bannedwords?retryWrites=true&w=majority",
   "port": "80",
