--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "token": "NzY1MDg4OTA4NzczODE4Mzc4.X4Pukg.D5R7Pqg1DGZKqZBjSpxDAPnNOUQ",
   "prefix": "$",
-  "mongo": "mongodb+srv://StriderUser:nypO3E7cnpzP8jO8@cluster0.z38we.mongodb.net/strider-bannedwords?retryWrites=true&w=majority",
+  "mongo": "mongodb+srv://StriderUser:xWyx25UhquIgmYaR@cluster0.z38we.mongodb.net/strider-bannedwords?retryWrites=true&w=majority",
   "port": "80",
   "clientID": "765088908773818378",
   "clientSecret": "P29xiNWlxf6s9DiKIcLLPx0-n5Dr1RxU",
